--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "moment": "^2.29.4",
     "next": "latest",
+    "npm": "^8.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
@@ -17,6 +20,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "prettier": "2.7.1",
     "typescript": "^4.7.4"
   },
   "packageManager": "yarn@3.2.2"
